<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040301"
    android:orientation="vertical"
    android:padding="@dimen/quest_lay_pad"
    tools:context=".QuestionThree">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/space"
        android:paddingBottom="@dimen/space"
        android:scaleType="centerCrop"
        android:src="@drawable/satellite" />

    <TextView
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/space"
        android:text="@string/Q3"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space"
        android:background="@android:color/white">

        <RadioButton
            android:id="@+id/ans3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans3a" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans3b" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans3c" />
    </RadioGroup>

    <TextView
        android:id="@+id/msg_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="previous"
            android:text="@string/back" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="next"
            android:text="@string/next" />
    </RelativeLayout>
</LinearLayout>